# group-moe

./: .gitignore  CLAUDE.md  README.md  TODO.md  pyproject.toml
docs/: arithmetic_experiment.md  cloud_training.md  molecular_proposal.md  paper2_design.md  paper2_experiment_log.md  paper2_routes_forward.md  paper_outline.md  scaling_experiment.md  ternary_experiment.md
paper/group-moe.1/: _progress.json  paper.tex
paper/group-moe.1.review/: review.md
paper/group-moe.2/: _progress.json  paper.tex
paper/group-moe.2.audit/: audit.md
paper/group-moe.3/: _progress.json  literature.md  paper.tex
paper/group-moe.3.review/: review.md
paper/group-moe.4/: paper.tex
paper/group-moe.4.review/: review.md
paper/group-moe.5/: paper.tex
paper/group-moe.5.audit/: audit.md
paper/group-moe.5.review/: review.md
scripts/: analyze_complement.py  analyze_md17_routing.py  analyze_visnet_v4.py  coverage_sweep.py  identify_md17_chemistry.py  lambda.sh  lambda_remote_setup.sh  lambda_train.sh  plot_md17_routing.py  run_scaling_sweep.sh  scaling_sweep.py  train_arithmetic.py  train_disparate.py  train_md17_groupmoe.py  train_md17_schnet.py  train_multigroup.py  train_nary.py  train_qm9.py  train_qm9_groupmoe.py  train_qm9_visnet.py  train_qm9_visnet_groupmoe.py  train_ternary.py  train_transformer.py
src/data/: __init__.py  arithmetic.py  disparate.py  md17.py  multigroup.py  nary.py  qm9.py  ternary.py
tests/: test_arithmetic.py  test_disparate.py  test_groups.py  test_modules.py  test_multigroup.py  test_symmetric.py  test_ternary.py  test_transformer.py
(+26 files in other folders)
